lab1/lab1-testsuite-larger/lab1-test-dir/ParCPP.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.18.10 from ParCPP.y
-----------------------------------------------------------------------------

state 5 contains 1 shift/reduce conflicts.
state 172 contains 4 shift/reduce conflicts.
state 207 contains 1 shift/reduce conflicts.

terminal L_err is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Integer -> L_integ                                 (1)
	Double -> L_doubl                                  (2)
	Char -> L_charac                                   (3)
	String -> L_quoted                                 (4)
	Id -> L_Id                                         (5)
	Program -> ListDef                                 (6)
	ListDef ->                                         (7)
	ListDef -> ListDef Def                             (8)
	Def -> 'inline' Def                                (9)
	Def -> Type Id '(' ListArg ')' ';'                 (10)
	Def -> Type Id '(' ListArg ')' '{' ListStmt '}'    (11)
	Def -> TDef                                        (12)
	Def -> Var ';'                                     (13)
	Def -> Struct                                      (14)
	Def -> 'using' QConst ';'                          (15)
	ListArg ->                                         (16)
	ListArg -> Arg                                     (17)
	ListArg -> Arg ',' ListArg                         (18)
	ListStmt ->                                        (19)
	ListStmt -> ListStmt Stmt                          (20)
	Stmt -> 'return' Expr ';'                          (21)
	Stmt -> 'do' Stmt 'while' '(' Expr ')'             (22)
	Stmt -> 'while' '(' Expr ')' Stmt                  (23)
	Stmt -> 'if' '(' Expr ')' Stmt                     (24)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (25)
	Stmt -> 'for' '(' Var ';' Expr ';' Expr ')' Stmt   (26)
	Stmt -> Expr ';'                                   (27)
	Stmt -> Var ';'                                    (28)
	Stmt -> ';'                                        (29)
	Stmt -> '{' ListStmt '}'                           (30)
	Stmt -> TDef                                       (31)
	Stmt -> Struct                                     (32)
	Expr16 -> Integer                                  (33)
	Expr16 -> Double                                   (34)
	Expr16 -> Char                                     (35)
	Expr16 -> ListString                               (36)
	Expr16 -> 'true'                                   (37)
	Expr16 -> 'false'                                  (38)
	Expr16 -> QConst                                   (39)
	Expr16 -> '(' Expr ')'                             (40)
	ListString -> String                               (41)
	ListString -> String ListString                    (42)
	Expr15 -> Expr16 '[' Expr ']'                      (43)
	Expr15 -> Expr16 '(' ListExpr ')'                  (44)
	Expr15 -> Expr16                                   (45)
	Expr14 -> Expr14 '.' Expr15                        (46)
	Expr14 -> Expr14 '->' Expr15                       (47)
	Expr14 -> Expr15 '++'                              (48)
	Expr14 -> Expr15 '--'                              (49)
	Expr14 -> '*' Expr15                               (50)
	Expr14 -> Expr15                                   (51)
	Expr13 -> '!' Expr14                               (52)
	Expr13 -> '++' Expr14                              (53)
	Expr13 -> '--' Expr14                              (54)
	Expr13 -> '-' Expr14                               (55)
	Expr13 -> Expr14                                   (56)
	Expr12 -> Expr12 '%' Expr13                        (57)
	Expr12 -> Expr12 '*' Expr13                        (58)
	Expr12 -> Expr12 '/' Expr13                        (59)
	Expr12 -> Expr13                                   (60)
	Expr11 -> Expr11 '+' Expr12                        (61)
	Expr11 -> Expr11 '-' Expr12                        (62)
	Expr11 -> Expr12                                   (63)
	Expr10 -> Expr10 '<<' Expr11                       (64)
	Expr10 -> Expr10 '>>' Expr11                       (65)
	Expr10 -> Expr11                                   (66)
	Expr9 -> Expr9 '<' Expr10                          (67)
	Expr9 -> Expr9 '>' Expr10                          (68)
	Expr9 -> Expr9 '<=' Expr10                         (69)
	Expr9 -> Expr9 '>=' Expr10                         (70)
	Expr9 -> Expr10                                    (71)
	Expr8 -> Expr8 '==' Expr9                          (72)
	Expr8 -> Expr8 '!=' Expr9                          (73)
	Expr8 -> Expr9                                     (74)
	Expr4 -> Expr4 '&&' Expr5                          (75)
	Expr4 -> Expr5                                     (76)
	Expr3 -> Expr3 '||' Expr4                          (77)
	Expr3 -> Expr4                                     (78)
	Expr2 -> Expr2 '=' Expr3                           (79)
	Expr2 -> Expr2 '+=' Expr3                          (80)
	Expr2 -> Expr2 '-=' Expr3                          (81)
	Expr2 -> Expr2 '?' Expr2 ':' Expr2                 (82)
	Expr2 -> Expr3                                     (83)
	Expr1 -> 'throw' Expr2                             (84)
	Expr1 -> Expr2                                     (85)
	Expr -> Expr1                                      (86)
	Expr5 -> Expr6                                     (87)
	Expr6 -> Expr7                                     (88)
	Expr7 -> Expr8                                     (89)
	ListExpr ->                                        (90)
	ListExpr -> Expr                                   (91)
	ListExpr -> Expr ',' ListExpr                      (92)
	Type -> Type '&'                                   (93)
	Type -> 'bool'                                     (94)
	Type -> 'double'                                   (95)
	Type -> 'int'                                      (96)
	Type -> 'void'                                     (97)
	Type -> QConst                                     (98)
	QConst -> ListConst                                (99)
	ListConst -> Const                                 (100)
	ListConst -> Const '::' ListConst                  (101)
	Const -> Id                                        (102)
	Const -> Id '<' ListType '>'                       (103)
	ListType -> Type                                   (104)
	ListType -> Type ',' ListType                      (105)
	TDef -> 'typedef' Type Id ';'                      (106)
	Var -> 'const' Var                                 (107)
	Var -> Type Id                                     (108)
	Var -> Type Id ',' ListId                          (109)
	Var -> Type Id '=' Expr                            (110)
	ListId -> Id                                       (111)
	ListId -> Id ',' ListId                            (112)
	Arg -> 'const' Arg1                                (113)
	Arg -> Arg1                                        (114)
	Arg1 -> Type                                       (115)
	Arg1 -> Type Id                                    (116)
	Arg1 -> Type Id '=' Expr                           (117)
	Arg1 -> '(' Arg ')'                                (118)
	Struct -> 'struct' Id '{' ListDef '}' ';'          (119)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'const'        { PT _ (TS _ 34) }
	'do'           { PT _ (TS _ 35) }
	'double'       { PT _ (TS _ 36) }
	'else'         { PT _ (TS _ 37) }
	'false'        { PT _ (TS _ 38) }
	'for'          { PT _ (TS _ 39) }
	'if'           { PT _ (TS _ 40) }
	'inline'       { PT _ (TS _ 41) }
	'int'          { PT _ (TS _ 42) }
	'return'       { PT _ (TS _ 43) }
	'struct'       { PT _ (TS _ 44) }
	'throw'        { PT _ (TS _ 45) }
	'true'         { PT _ (TS _ 46) }
	'typedef'      { PT _ (TS _ 47) }
	'using'        { PT _ (TS _ 48) }
	'void'         { PT _ (TS _ 49) }
	'while'        { PT _ (TS _ 50) }
	'{'            { PT _ (TS _ 51) }
	'||'           { PT _ (TS _ 52) }
	'}'            { PT _ (TS _ 53) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id _) }
	L_err          { _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Integer         rule  1
	Double          rule  2
	Char            rule  3
	String          rule  4
	Id              rule  5
	Program         rule  6
	ListDef         rules 7, 8
	Def             rules 9, 10, 11, 12, 13, 14, 15
	ListArg         rules 16, 17, 18
	ListStmt        rules 19, 20
	Stmt            rules 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32
	Expr16          rules 33, 34, 35, 36, 37, 38, 39, 40
	ListString      rules 41, 42
	Expr15          rules 43, 44, 45
	Expr14          rules 46, 47, 48, 49, 50, 51
	Expr13          rules 52, 53, 54, 55, 56
	Expr12          rules 57, 58, 59, 60
	Expr11          rules 61, 62, 63
	Expr10          rules 64, 65, 66
	Expr9           rules 67, 68, 69, 70, 71
	Expr8           rules 72, 73, 74
	Expr4           rules 75, 76
	Expr3           rules 77, 78
	Expr2           rules 79, 80, 81, 82, 83
	Expr1           rules 84, 85
	Expr            rule  86
	Expr5           rule  87
	Expr6           rule  88
	Expr7           rule  89
	ListExpr        rules 90, 91, 92
	Type            rules 93, 94, 95, 96, 97, 98
	QConst          rule  99
	ListConst       rules 100, 101
	Const           rules 102, 103
	ListType        rules 104, 105
	TDef            rule  106
	Var             rules 107, 108, 109, 110
	ListId          rules 111, 112
	Arg             rules 113, 114
	Arg1            rules 115, 116, 117, 118
	Struct          rule  119

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 7
	'const'        reduce using rule 7
	'double'       reduce using rule 7
	'inline'       reduce using rule 7
	'int'          reduce using rule 7
	'struct'       reduce using rule 7
	'typedef'      reduce using rule 7
	'using'        reduce using rule 7
	'void'         reduce using rule 7
	L_Id           reduce using rule 7
	%eof           reduce using rule 7

	Program        goto state 3
	ListDef        goto state 4

State 1


	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	'+='           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'-='           reduce using rule 1
	'->'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<<'           reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'>>'           reduce using rule 1
	'?'            reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	Program -> ListDef .                                (rule 6)
	ListDef -> ListDef . Def                            (rule 8)

	'bool'         shift, and enter state 14
	'const'        shift, and enter state 15
	'double'       shift, and enter state 16
	'inline'       shift, and enter state 17
	'int'          shift, and enter state 18
	'struct'       shift, and enter state 19
	'typedef'      shift, and enter state 20
	'using'        shift, and enter state 21
	'void'         shift, and enter state 22
	L_Id           shift, and enter state 23
	%eof           reduce using rule 6

	Id             goto state 5
	Def            goto state 6
	Type           goto state 7
	QConst         goto state 8
	ListConst      goto state 9
	Const          goto state 10
	TDef           goto state 11
	Var            goto state 12
	Struct         goto state 13

State 5

	Const -> Id .                                       (rule 102)
	Const -> Id . '<' ListType '>'                      (rule 103)

	'!='           reduce using rule 102
	'%'            reduce using rule 102
	'&'            reduce using rule 102
	'&&'           reduce using rule 102
	'('            reduce using rule 102
	')'            reduce using rule 102
	'*'            reduce using rule 102
	'+'            reduce using rule 102
	'++'           reduce using rule 102
	'+='           reduce using rule 102
	','            reduce using rule 102
	'-'            reduce using rule 102
	'--'           reduce using rule 102
	'-='           reduce using rule 102
	'->'           reduce using rule 102
	'.'            reduce using rule 102
	'/'            reduce using rule 102
	':'            reduce using rule 102
	'::'           reduce using rule 102
	';'            reduce using rule 102
	'<'            shift, and enter state 34
			(reduce using rule 102)

	'<<'           reduce using rule 102
	'<='           reduce using rule 102
	'='            reduce using rule 102
	'=='           reduce using rule 102
	'>'            reduce using rule 102
	'>='           reduce using rule 102
	'>>'           reduce using rule 102
	'?'            reduce using rule 102
	'['            reduce using rule 102
	']'            reduce using rule 102
	'||'           reduce using rule 102
	L_Id           reduce using rule 102


State 6

	ListDef -> ListDef Def .                            (rule 8)

	'bool'         reduce using rule 8
	'const'        reduce using rule 8
	'double'       reduce using rule 8
	'inline'       reduce using rule 8
	'int'          reduce using rule 8
	'struct'       reduce using rule 8
	'typedef'      reduce using rule 8
	'using'        reduce using rule 8
	'void'         reduce using rule 8
	'}'            reduce using rule 8
	L_Id           reduce using rule 8
	%eof           reduce using rule 8


State 7

	Def -> Type . Id '(' ListArg ')' ';'                (rule 10)
	Def -> Type . Id '(' ListArg ')' '{' ListStmt '}'    (rule 11)
	Type -> Type . '&'                                  (rule 93)
	Var -> Type . Id                                    (rule 108)
	Var -> Type . Id ',' ListId                         (rule 109)
	Var -> Type . Id '=' Expr                           (rule 110)

	'&'            shift, and enter state 33
	L_Id           shift, and enter state 23

	Id             goto state 32

State 8

	Type -> QConst .                                    (rule 98)

	'&'            reduce using rule 98
	')'            reduce using rule 98
	','            reduce using rule 98
	'>'            reduce using rule 98
	L_Id           reduce using rule 98


State 9

	QConst -> ListConst .                               (rule 99)

	'!='           reduce using rule 99
	'%'            reduce using rule 99
	'&'            reduce using rule 99
	'&&'           reduce using rule 99
	'('            reduce using rule 99
	')'            reduce using rule 99
	'*'            reduce using rule 99
	'+'            reduce using rule 99
	'++'           reduce using rule 99
	'+='           reduce using rule 99
	','            reduce using rule 99
	'-'            reduce using rule 99
	'--'           reduce using rule 99
	'-='           reduce using rule 99
	'->'           reduce using rule 99
	'.'            reduce using rule 99
	'/'            reduce using rule 99
	':'            reduce using rule 99
	';'            reduce using rule 99
	'<'            reduce using rule 99
	'<<'           reduce using rule 99
	'<='           reduce using rule 99
	'='            reduce using rule 99
	'=='           reduce using rule 99
	'>'            reduce using rule 99
	'>='           reduce using rule 99
	'>>'           reduce using rule 99
	'?'            reduce using rule 99
	'['            reduce using rule 99
	']'            reduce using rule 99
	'||'           reduce using rule 99
	L_Id           reduce using rule 99


State 10

	ListConst -> Const .                                (rule 100)
	ListConst -> Const . '::' ListConst                 (rule 101)

	'!='           reduce using rule 100
	'%'            reduce using rule 100
	'&'            reduce using rule 100
	'&&'           reduce using rule 100
	'('            reduce using rule 100
	')'            reduce using rule 100
	'*'            reduce using rule 100
	'+'            reduce using rule 100
	'++'           reduce using rule 100
	'+='           reduce using rule 100
	','            reduce using rule 100
	'-'            reduce using rule 100
	'--'           reduce using rule 100
	'-='           reduce using rule 100
	'->'           reduce using rule 100
	'.'            reduce using rule 100
	'/'            reduce using rule 100
	':'            reduce using rule 100
	'::'           shift, and enter state 31
	';'            reduce using rule 100
	'<'            reduce using rule 100
	'<<'           reduce using rule 100
	'<='           reduce using rule 100
	'='            reduce using rule 100
	'=='           reduce using rule 100
	'>'            reduce using rule 100
	'>='           reduce using rule 100
	'>>'           reduce using rule 100
	'?'            reduce using rule 100
	'['            reduce using rule 100
	']'            reduce using rule 100
	'||'           reduce using rule 100
	L_Id           reduce using rule 100


State 11

	Def -> TDef .                                       (rule 12)

	'bool'         reduce using rule 12
	'const'        reduce using rule 12
	'double'       reduce using rule 12
	'inline'       reduce using rule 12
	'int'          reduce using rule 12
	'struct'       reduce using rule 12
	'typedef'      reduce using rule 12
	'using'        reduce using rule 12
	'void'         reduce using rule 12
	'}'            reduce using rule 12
	L_Id           reduce using rule 12
	%eof           reduce using rule 12


State 12

	Def -> Var . ';'                                    (rule 13)

	';'            shift, and enter state 30


State 13

	Def -> Struct .                                     (rule 14)

	'bool'         reduce using rule 14
	'const'        reduce using rule 14
	'double'       reduce using rule 14
	'inline'       reduce using rule 14
	'int'          reduce using rule 14
	'struct'       reduce using rule 14
	'typedef'      reduce using rule 14
	'using'        reduce using rule 14
	'void'         reduce using rule 14
	'}'            reduce using rule 14
	L_Id           reduce using rule 14
	%eof           reduce using rule 14


State 14

	Type -> 'bool' .                                    (rule 94)

	'&'            reduce using rule 94
	')'            reduce using rule 94
	','            reduce using rule 94
	'>'            reduce using rule 94
	L_Id           reduce using rule 94


State 15

	Var -> 'const' . Var                                (rule 107)

	'bool'         shift, and enter state 14
	'const'        shift, and enter state 15
	'double'       shift, and enter state 16
	'int'          shift, and enter state 18
	'void'         shift, and enter state 22
	L_Id           shift, and enter state 23

	Id             goto state 5
	Type           goto state 28
	QConst         goto state 8
	ListConst      goto state 9
	Const          goto state 10
	Var            goto state 29

State 16

	Type -> 'double' .                                  (rule 95)

	'&'            reduce using rule 95
	')'            reduce using rule 95
	','            reduce using rule 95
	'>'            reduce using rule 95
	L_Id           reduce using rule 95


State 17

	Def -> 'inline' . Def                               (rule 9)

	'bool'         shift, and enter state 14
	'const'        shift, and enter state 15
	'double'       shift, and enter state 16
	'inline'       shift, and enter state 17
	'int'          shift, and enter state 18
	'struct'       shift, and enter state 19
	'typedef'      shift, and enter state 20
	'using'        shift, and enter state 21
	'void'         shift, and enter state 22
	L_Id           shift, and enter state 23

	Id             goto state 5
	Def            goto state 27
	Type           goto state 7
	QConst         goto state 8
	ListConst      goto state 9
	Const          goto state 10
	TDef           goto state 11
	Var            goto state 12
	Struct         goto state 13

State 18

	Type -> 'int' .                                     (rule 96)

	'&'            reduce using rule 96
	')'            reduce using rule 96
	','            reduce using rule 96
	'>'            reduce using rule 96
	L_Id           reduce using rule 96


State 19

	Struct -> 'struct' . Id '{' ListDef '}' ';'         (rule 119)

	L_Id           shift, and enter state 23

	Id             goto state 26

State 20

	TDef -> 'typedef' . Type Id ';'                     (rule 106)

	'bool'         shift, and enter state 14
	'double'       shift, and enter state 16
	'int'          shift, and enter state 18
	'void'         shift, and enter state 22
	L_Id           shift, and enter state 23

	Id             goto state 5
	Type           goto state 25
	QConst         goto state 8
	ListConst      goto state 9
	Const          goto state 10

State 21

	Def -> 'using' . QConst ';'                         (rule 15)

	L_Id           shift, and enter state 23

	Id             goto state 5
	QConst         goto state 24
	ListConst      goto state 9
	Const          goto state 10

State 22

	Type -> 'void' .                                    (rule 97)

	'&'            reduce using rule 97
	')'            reduce using rule 97
	','            reduce using rule 97
	'>'            reduce using rule 97
	L_Id           reduce using rule 97


State 23

	Id -> L_Id .                                        (rule 5)

	'!='           reduce using rule 5
	'%'            reduce using rule 5
	'&'            reduce using rule 5
	'&&'           reduce using rule 5
	'('            reduce using rule 5
	')'            reduce using rule 5
	'*'            reduce using rule 5
	'+'            reduce using rule 5
	'++'           reduce using rule 5
	'+='           reduce using rule 5
	','            reduce using rule 5
	'-'            reduce using rule 5
	'--'           reduce using rule 5
	'-='           reduce using rule 5
	'->'           reduce using rule 5
	'.'            reduce using rule 5
	'/'            reduce using rule 5
	':'            reduce using rule 5
	'::'           reduce using rule 5
	';'            reduce using rule 5
	'<'            reduce using rule 5
	'<<'           reduce using rule 5
	'<='           reduce using rule 5
	'='            reduce using rule 5
	'=='           reduce using rule 5
	'>'            reduce using rule 5
	'>='           reduce using rule 5
	'>>'           reduce using rule 5
	'?'            reduce using rule 5
	'['            reduce using rule 5
	']'            reduce using rule 5
	'{'            reduce using rule 5
	'||'           reduce using rule 5
	L_Id           reduce using rule 5


State 24

	Def -> 'using' QConst . ';'                         (rule 15)

	';'            shift, and enter state 44


State 25

	Type -> Type . '&'                                  (rule 93)
	TDef -> 'typedef' Type . Id ';'                     (rule 106)

	'&'            shift, and enter state 33
	L_Id           shift, and enter state 23

	Id             goto state 43

State 26

	Struct -> 'struct' Id . '{' ListDef '}' ';'         (rule 119)

	'{'            shift, and enter state 42


State 27

	Def -> 'inline' Def .                               (rule 9)

	'bool'         reduce using rule 9
	'const'        reduce using rule 9
	'double'       reduce using rule 9
	'inline'       reduce using rule 9
	'int'          reduce using rule 9
	'struct'       reduce using rule 9
	'typedef'      reduce using rule 9
	'using'        reduce using rule 9
	'void'         reduce using rule 9
	'}'            reduce using rule 9
	L_Id           reduce using rule 9
	%eof           reduce using rule 9


State 28

	Type -> Type . '&'                                  (rule 93)
	Var -> Type . Id                                    (rule 108)
	Var -> Type . Id ',' ListId                         (rule 109)
	Var -> Type . Id '=' Expr                           (rule 110)

	'&'            shift, and enter state 33
	L_Id           shift, and enter state 23

	Id             goto state 41

State 29

	Var -> 'const' Var .                                (rule 107)

	';'            reduce using rule 107


State 30

	Def -> Var ';' .                                    (rule 13)
